Fix length calculation for the path for abstract unix domain sockets

Since the struct has a fixed-lenght char[] its sizeof() contains
trailing NUL octets which results in corrupt abstract sockets.

Instead, take the strlen(3) of the path, plus the single NUL octet
(which identifies the path as an abstract path rather than a file-
system path) plus the offset from the start of the struct to the
start of the char array.

This fixes:

https://bugs.freedesktop.org/show_bug.cgi?id=15677